--- a/.github/workflows/cpp_build.yml
+++ b/.github/workflows/cpp_build.yml
@@ -19,7 +19,7 @@ jobs:
           
       - name: Install prerequisites (qpOASES)
         run: |
-          git clone --single-branch --depth 1 https://github.com/coin-or/qpOASES.git　
+          git clone https://github.com/coin-or/qpOASES.git　
           cd qpOASES
           sed -i -e 's/option(BUILD_SHARED_LIBS "If ON, build shared library instead of static" OFF)/option(BUILD_SHARED_LIBS "If ON, build shared library instead of static" ON)/g' CMakeLists.txt
           mkdir build
@@ -33,7 +33,7 @@ jobs:
           
       - name: Build & install DQRobotics (${{ matrix.testbranches }})
         run: |
-          git clone --depth 1 -b ${{ matrix.testbranches }} https://github.com/dqrobotics/cpp
+          git clone -b ${{ matrix.testbranches }} https://github.com/dqrobotics/cpp
           cd cpp
           sh .github/scripts/ubuntu/install_prerequisites.sh
           sh .github/scripts/ubuntu/build.sh
@@ -51,7 +51,7 @@ jobs:
           sudo apt install ./*.deb
           
       - name: Clone cpp-examples (${{ matrix.testbranches }})
-        run: git clone --depth 1 -b ${{ matrix.testbranches }} https://github.com/dqrobotics/cpp-examples.git
+        run: git clone -b ${{ matrix.testbranches }} https://github.com/dqrobotics/cpp-examples.git
           
       - name: Build examples
         run: |
