--- a/.github/workflows/cpp_build.yml
+++ b/.github/workflows/cpp_build.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        testbranches: ['release','master']
+        testbranches: ['master']
 
     steps:
       - uses: actions/checkout@v2
